istio_ambient/research/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateways
  labels:
    ertia.io/routing: platform
